# EagleRAG

./: .dockerignore  .env.biomed.example  .env.example  .gitignore  AGENTS.md  LICENSE  NOTICE  README.md  README.zh.md  Taskfile.yml  alembic.ini  docker-compose.biomed.yml  docker-compose.override.yml  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: docs-pages.yml  mcp-deploy.yml
.trae/: .gitignore
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_health_module_tables.py  0003_mcp_call_log_index.py  0004_task_audit_name_source_uri.py  0005_scope_filter_tag_catalog.py  0006_purge_non_image_attachments.py  0007_plugin_namespace.py  0008_namespace_unique_constraints.py
design/: eagle-rag.pen
docker/: Dockerfile.api  Dockerfile.docs  Dockerfile.frontend  Dockerfile.mcp  Dockerfile.worker
docker/knowhere-self-hosted/: .env.example  compose.yaml  env.defaults
docker/scripts/: prefetch_biomed_models.py  prefetch_hf_model.py  uv_sync_with_retry.sh
docker/swarm/: haproxy.cfg  mcp-stack.yml
docs/en/: glossary.md  index.md  learning-path.md
docs/en/api/: attachments.md  documents.md  health-admin.md  index.md  ingest.md  knowledge-bases.md  mcp-tools.md  notifications.md  query.md  sessions.md  tasks.md
docs/javascripts/: mathjax.js
docs/zh/: glossary.md  index.md  learning-path.md
eagle_rag/: README.md  __init__.py  config.py  mcp_cache.py  mcp_resilience.py  metrics.py  settings.yaml
eagle_rag/admin/: mcp_log.py  metrics.py  system_setting.py
eagle_rag/api/: README.md  __init__.py  app.py  attachments.py  deps.py  documents.py  health.py  ingest.py  knowledge_bases.py  mcp_http.py  mcp_server.py  mcp_server_http.py  notifications.py  query.py  tags.py  users.py
eagle_rag/attachments/: parser.py  store.py  validation.py
eagle_rag/db/: __init__.py  namespace.py
eagle_rag/documents/: __init__.py  reconstruct.py
eagle_rag/generation/: multimodal_engine.py
eagle_rag/images/: store.py
eagle_rag/index/: README.md  document_structure.py  milvus_kb_ops.py  milvus_pool.py  milvus_text_store.py  milvus_visual_store.py  registry.py  tag_catalog.py
eagle_rag/ingest/: README.md  knowhere_adapter.py  limits.py  pixelrag_adapter.py  preprocess.py  router.py  runner.py  selectors.py  url_validator.py  visual_encoder.py
eagle_rag/kb/: __init__.py  health.py  lifecycle.py  registry.py  stats.py
eagle_rag/notifications/: store.py
eagle_rag/plugins/: __init__.py  audit.py  classifier.py  collection_registry.py  context.py  contract.py  core_defaults.py  encoder_registry.py  encoder_runtime.py  errors.py  hookbus.py  hooks.py  hotpath_hooks.py  ingest_catalog.py  ingest_helpers.py  ingest_orchestrator.py  ingest_tracker.py  manager.py  mcp_registry.py  milvus_ns.py  pipeline.py  rerank_policy.py  retriever_orchestrator.py  routing.py  scope_routing.py
eagle_rag/retrievers/: README.md  hybrid_text_retriever.py  knowhere_graph_retriever.py  pixelrag_visual_retriever.py
eagle_rag/router/: __init__.py  biomed_post_rerank.py  llm_factory.py  models.py  rerank_fusion.py  router_engine.py  selectors.py
eagle_rag/sessions/: store.py
eagle_rag/storage/: dedup.py  minio_client.py
eagle_rag/tasks/: celery_app.py  dead_letter.py  state.py
eagle_rag/telemetry/: __init__.py  context.py  logging_setup.py  tracing.py
eval/biomed/: CORPUS.md  EVAL.md  README.md  RETRIEVAL.md  SCENARIO.md  SETUP.md  SOURCES.md
examples/: agent.py
frontend/: .gitignore  README.md  biome.json  components.json  openapi-ts.config.ts  package.json  proxy.ts  theme.ts
frontend/app/: globals.css  providers.tsx
frontend/components/: AppBar.tsx  AppShell.tsx  GlobalSearchModal.tsx  LocaleSwitcher.tsx  Sidebar.tsx  pdf-thumbnail-utils.ts
frontend/i18n/: request.ts  routing.ts
frontend/lib/: design-frames.ts  types.ts  utils.ts
frontend/messages/: en.json  zh.json
frontend/scripts/: docker-dev.sh
logs/: ai_telemetry.jsonl  plugin-architecture.md
plugins/_template/: README.md  __init__.py  mcp_tools.py
plugins/biomed/: __init__.py  chunker.py  classifiers.py  doc_profile.py  doc_profile_prototypes.yaml  encoders.py  entity_expand.py  hooks_extra.py  mcp_tools.py  query_intent.py  query_route.py  rerank.py  retrieval_hooks.py  routing_rules.yaml  scoring.py  supplement.py  umls.py
plugins/lakehouse_bi/: __init__.py  example_connector.py  ingest_hooks.py  mcp_tools.py  query_assemble.py
tests/: conftest.py  test_api_admin_health.py  test_api_ingest_queue_metrics.py  test_api_kb_attachments_notifications_users.py  test_api_query_sessions_documents_tasks.py  test_attachment_routing.py  test_attachments_parser.py  test_attachments_purge.py  test_attachments_validation.py  test_dashscope_embed_batch.py  test_ingest_assets.py  test_ingest_limits.py  test_ingest_smoke.py  test_ingest_url_validation.py  test_kb_format_distribution.py  test_kb_stats.py  test_knowhere_parse_mode.py  test_knowhere_sections.py  test_knowhere_visual_chunks.py  test_mcp_auth.py  test_mcp_cache.py  test_mcp_config.py  test_mcp_http_transport.py  test_mcp_metrics.py  test_mcp_resilience.py  test_milvus_structure_fetch.py  test_milvus_text_clamp.py  test_milvus_text_store_db.py  test_prefetch_hf_model.py  test_retrievers.py  test_router_generation.py  test_task_state_rerun.py  test_telemetry_hotspots.py  test_telemetry_logging.py  test_telemetry_tracing.py  test_visual_encoder.py  test_visual_retriever_merge.py
tests/eval/: test_gold_corpus_audit.py
tests/integration/: test_plugin_namespace_e2e.py
tests/plugins/: stub_biomed_plugin.py  test_biomed_chunker.py  test_biomed_complete.py  test_biomed_doc_profile.py  test_biomed_open_clip.py  test_biomed_retrieval_optimization.py  test_biomed_umls.py  test_contract_conformance.py  test_core_defaults.py  test_encoder_runtime.py  test_hookbus.py  test_hotpath_hooks.py  test_ingest_visual_tile.py  test_lakehouse_complete.py  test_manager.py  test_namespace_isolation.py  test_namespace_propagation.py  test_parent_doc_path_filter.py  test_plugin_audit.py  test_rerank_orchestrator.py  test_scope_routing_encoder.py
(+382 files in other folders)
