[project]
name = "eagle-rag"
version = "0.1.0"
description = "Eagle-RAG: industry-agnostic multimodal RAG knowledge base (Agent / LLM data layer) backend"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "Wang Zhiwei" }]

# Core runtime dependencies (installed by default via `uv sync`)
dependencies = [
    # Web framework & ASGI
    "fastapi",
    "uvicorn[standard]",
    "sse-starlette",
    "python-multipart",
    # Async task queue & cache
    "celery[redis]",
    "redis[hiredis]",
    # Object storage
    "minio",
    # HTTP client
    "httpx",
    # Config & data modeling
    "pydantic>=2",
    "pydantic-settings>=2",
    "pyyaml",
    # DB migrations (Alembic) & PostgreSQL drivers (async + sync)
    "sqlalchemy>=2",
    "sqlmodel>=0.0.22",
    "alembic>=1.14",
    "asyncpg",
    "psycopg2-binary",
    # LlamaIndex orchestration & routing
    "llama-index",
    "llama-index-vector-stores-milvus",
    "llama-index-tools-mcp",
    # DeepSeek / DashScope (Qwen): LLM / VLM / embedding / rerank
    "llama-index-llms-deepseek",
    "llama-index-llms-dashscope",
    "llama-index-multi-modal-llms-dashscope",
    "llama-index-embeddings-dashscope",
    "llama-index-postprocessor-dashscope-rerank",
    # Vector store & vision / parsing
    "pymilvus",
    "playwright",
    "pillow",
    "pypdf",
    "pdfplumber",      # PDF form probing (complements pypdf)
    # Knowhere document semantic parser: API mode (knowhere-python-sdk → :5005) or parser mode (knowhere-parse-sdk, in-process)
    "knowhere-python-sdk",
    "knowhere-parse-sdk @ git+https://github.com/zhiweio/knowhere-parse-sdk.git",
    # PixelRAG: visual encoder + slicer (pixelrag_render / pixelrag_embed); required, installed by default
    "pixelrag @ git+https://github.com/StarTrail-org/PixelRAG.git",
    # Local Qwen3-VL-Embedding-2B visual encoder (_Qwen3VLVisualEncoder singleton):
    # transformers provides AutoProcessor / Qwen3VLForConditionalGeneration; torch is the inference backend.
    # For a smaller CPU-only torch, use `uv sync --index-strategy unsafe-best-match` with
    # `--torch-backend cpu` or point [tool.uv.sources] at a CPU index.
    "transformers",
    "torch",
    "torchvision",  # Qwen3-VL AutoProcessor video processor dependency
    "mcp>=1.28.1",
    "psutil",          # /admin/probes resource limit probing (CPU / memory)
    "humanize",        # /health uptime human-readable duration (naturaldelta)
    # Telemetry & observability
    "structlog",
    "loguru",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
    # MCP cloud HTTP deployment (PrefectHQ/fastmcp streamable HTTP + resilience + metrics)
    "fastmcp>=2.3",
    "tenacity",        # MCP tool retries (exponential backoff)
    "pybreaker",       # MCP tool circuit breaker
    "prometheus-client",  # MCP /metrics
]

# Dev / docs dependency groups: `uv sync --group dev` / `uv sync --group docs`
[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
]
# Docs site build deps: `uv sync --group docs`.
# mkdocs-static-i18n provides bilingual folder layout (en/zh).
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocs-static-i18n>=1.2",
    "pymdown-extensions>=10.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Allow direct references in dependencies (git+ / file:///path).
# pixelrag is a git dependency; hatchling rejects the build without this option.
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["eagle_rag"]

# cef-capi-py is a hard dependency declared by pixelrag, but pixelrag_render /
# pixelrag_embed never import it (CDP backend uses Chrome DevTools Protocol over WebSocket, not CEF).
# Wheels exist only for manylinux2014_x86_64 / macOS / Windows — not linux/aarch64 —
# which breaks Apple Silicon Docker (linux/arm64) builds. Override as a platform-conditional dep:
# install on non-linux/aarch64 platforms; skip on linux/aarch64 (no functional impact).
[tool.uv]
override-dependencies = [
    "cef-capi-py ; sys_platform != 'linux' or platform_machine != 'aarch64'",
    # knowhere-parse-sdk pins pymupdf==1.27.2; pixelrag requires >=1.27.2.3 — unify on the newer pin.
    "pymupdf>=1.27.2.3",
    # knowhere-shared (knowhere-parse-sdk dep) pins alembic==1.13.1; eagle-rag requires >=1.14.
    "alembic>=1.14",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
